--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
       <div class="col harf">
         <h2>NEWS</h2>
         <p>どなたでも参加可能！オープンゼミ 〜Gitを使ってみよう〜</p>
-<<<<<<< HEAD
-        <p５月６日開催</p>
->>>>>>> udate-news
+        <p>5月5日開催　</p>
       </div>
     </div>
     <div class="row">
